--- a/packages/L3/pyproject.toml
+++ b/packages/L3/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 authors = [{ name = "James Clause", email = "clause@udel.edu" }]
 requires-python = ">=3.14"
-dependencies = ["pydantic>=2.12.3", "util"]
+dependencies = ["click>=8.3.1", "pydantic>=2.12.3", "util"]
 
-[dependency-groups]
-dev = ["pytest>=9.0.2"]
+
+[tool.uv]
+package = true
+
+[project.scripts]
+L3 = "L3:main.main"
